--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class="container">
-    <a class="navbar-brand" href="/">Awesome Blog</a>
+    <a class="navbar-brand" href="/">Music Reviews</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,9 +12,12 @@
         <li class="nav-item">
           <a class="nav-link {{active path '/posts'}}" href="/posts">Posts</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {{active path '/new'}}" href="/new">Create Post</a>
+        </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="d-flex" action="/posts" method="GET">
+        <input class="form-control me-2" name="title" type="search" placeholder="Search post" value="{{ title }}" aria-label="Search">
         <button class="btn btn-danger" type="submit">Search</button>
       </form>
     </div>
