--- a/views/posts/list.hbs
+++ b/views/posts/list.hbs
@@ -1,4 +1,12 @@
-<ul>
-    <li>Post1</li>
-    <li>Post2</li>
-</ul>
+{{#each postsModel as |post|}}
+    {{#with posts}}
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{title}}</h5>
+                <p class="card-text">{{text}}</p>
+                <a href="#" class="btn btn-primary">Read more</a>
+            </div>
+        </div>
+    {{/with}}
+{{/each}}
