--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -7,8 +7,8 @@
     </div>
 
     <div class="mb-3 form-group">
-        <label for="formFile" class="form-label">Upload your image!</label>
-        <input class="form-control" name="image" type="file" id="image">
+        <label for="title">Image</label>
+        <input name="image" type="text" class="form-control" id="image" placeholder="Enter URL image" value="">
     </div>
 
     <div class="form-group mb-3" > 
@@ -16,8 +16,6 @@
       <textarea name="text" type="text" class="form-control" id="text" placeholder="Write your review!" rows="10"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary">
-      New Post
-    </button>
+    <button type="submit" class="btn btn-primary">Create Post</button>
   </form>
 </section>
